# eodm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  main.yml
docs/: api.md  cli.md  examples.md  plugins.md
src/eodm/: __main__.py  encoder.py  errors.py  extract.py  load.py  odata.py  opensearch.py  serialize.py  serializers.py  stac_contrib.py  types.py
src/eodm/cli/: _filesystem.py  _globals.py  _serialization.py  _types.py
tests/: conftest.py  test_cli.py  test_data.py  test_odata.py  test_ogcapi_records.py  test_opensearch.py  test_serializers.py
tests/data/: odata.json  test_data.py
tests/data/opensearch/: creodias_describe_all.xml  creodias_search_ASA_APP_1P.json  creodias_search_ASA_APS_1P.json  creodias_search_ASA_IMP_1P.json  creodias_search_ASA_IMS_1P.json  creodias_search_ASA_WSS_1P.json  creodias_search_AUX_CAL.json  creodias_search_AUX_CTMANA.json  creodias_search_AUX_CTMFCT.json  creodias_search_AUX_GNSSRD.json  creodias_search_AUX_INS.json  creodias_search_AUX_L1_CKD.json  creodias_search_AUX_MOEORB.json  creodias_search_AUX_O3_M.json  creodias_search_AUX_POEORB.json  creodias_search_AUX_PP1.json  creodias_search_AUX_PP2.json  creodias_search_AUX_PRCPTF.json  creodias_search_AUX_PREORB.json  creodias_search_AUX_PROQUA.json  creodias_search_AUX_RESATT.json  creodias_search_AUX_RESORB.json  creodias_search_AUX_SCS.json  creodias_search_AUX_UT1UTC.json  creodias_search_AX___FPO_AX.json  creodias_search_AX___FRO_AX.json  creodias_search_CARD-BS.json  (+325 more)
(+15 files in other folders)
