[tool.poetry]
name = "eodm"
version = "0.0.0"
description = ""
authors = ["Nikola Jankovic <nikola.jankovic@eox.at>"]
readme = "README.md"
packages = [{include = "eodm", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"
fsspec = "^2024.3.1"
s3fs = "^2024.3.1"
pystac = "^1.10.0"
pystac-client = "^0.7.7"
odc-stac = "^0.3.9"
rioxarray = "^0.15.5"
rio-cogeo = "^5.3.0"
rio-stac = "^0.9.0"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = "^1.6.0"
mypy = "^1.10.0"
ruff = "^0.4.4"
mkdocs-material = "^9.5.23"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eodm = "eodm.__main__:app"

[tool.ruff]
line-length = 90
indent-width = 4

target-version = "py310"


[tool.mypy]
ignore_missing_imports = true
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    ".venv",
    "tests",
    "__main__.py"
]

[[tool.mypy.overrides]]
module = ["pkg_resources"]
ignore_missing_imports = true
